--- a/dev.html
+++ b/dev.html
@@ -25,6 +25,7 @@
 				<a class="nav-a" href="index.html">设计</a>
 				<a class="nav-a" href="dev.html">前端</a>
 				<a class="nav-a" href="test.html">实验</a>
+				<a class="nav-a" href="talk.html">我说</a>
 			</nav>
 		</header>
 		<!-- <section class="blue-box" style="padding-bottom: 6.25rem">
@@ -72,7 +73,7 @@
 						<span v-if="item.type === 1 && item.class === 1"># 实用案例组件</span>
 						<span>{{item.time}}</span>
 					</li>
-				</a
+				</a>
 			</div>
 		</section>
 		<footer class="footer flex">
