--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -26,6 +26,7 @@
 					<a class="nav-a" href="../../index.html">设计</a>
 					<a class="nav-a" href="../../dev.html">前端</a>
 					<a class="nav-a" href="../../test.html">实验</a>
+					<a class="nav-a" href="../../talk.html">我说</a>
 				</nav>
 			</header>
 			
