--- a/share/share-1-1.html
+++ b/share/share-1-1.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-	<meta name="keywords" content="设计师工作日常,UI设计师,funcss,whtool,摸鱼,小游戏,2048,Just Liu,UI,css3,css,html,vue,js,前端,设计,vue">
-	<meta name="description" content="这里是设计师工作日常，我是Just. Liu，这是我的个人网站，欢迎光临">
+	<meta name="keywords" content="vpn,梯子,翻墙,机场,节点,机场推荐,gpt,外网,科学上网">
+	<meta name="description" content="这里是设计师工作日常，我是Just. Liu，这是我的个人网站，欢迎光临！">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="baidu-site-verification" content="codeva-OkftNxyiqr" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -25,6 +25,7 @@
 				<a class="nav-a" href="../index.html">设计</a>
 				<a class="nav-a" href="../dev.html">前端</a>
 				<a class="nav-a" href="../test.html">实验</a>
+				<a class="nav-a" href="../talk.html">我说</a>
 			</nav>
 		</header>
 		<!-- <section class="blue-box" style="padding-bottom: 6.25rem">
@@ -77,7 +78,7 @@
 					<p>注册成功后，可以阅读里面的使用教程来学习使用，相信对聪明的小伙伴们来说，都很简单。如果有不懂的，可以公众号问我，或者 +v（ljue01）、<a href="https://t.me/designer_work_time" target="_blank">tg群</a>里问我。</p>
 					<p class="share-p-title">入口地址</p>
 					<p>想尝试的小伙伴请：<a href="https://u.xn--hwqp2zit2amna.com/auth/register?code=gqnnYqec" target="_blank">[点击进入] </a>。</p>
-					<p>40+的节点，一年使用过程中好像没有掉线的情况发生，博主个人觉得这点很nice的。</p>
+					<p>40+的节点，一年使用过程中好像没有掉线的情况发生，个人觉得这点很nice的。</p>
 					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231162020293.webp" alt="节点"  /></p>
 					<p>有任何问题欢迎关注公众号：设计师工作日常，私信留言。</p>
 					<p class="p-center"><img src="https://whtool.liujueyi.cn/img/wxgzh.png" alt="设计师工作日常" /></p>
