--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -14,6 +14,15 @@
 		<link rel="stylesheet" href="../../css/style.css">
 		<link rel="stylesheet" href="files/vipvideo.css">
 	</head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-X99HN84D35"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-X99HN84D35');
+	</script>
   <body>
     <div class="container">
 			<!-- 通用导航 -->
