--- a/share/share-1-1.html
+++ b/share/share-1-1.html
@@ -71,6 +71,19 @@
 					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637977.webp" alt="我有一颗中国心"  /></p>
 					<p class="share-p-title">福利资源</p>
 					<p>众所周知付费机场较比与其它的免费机场更安全，而此机场更赠送一个影视媒体库，热门高清影片免费看，且无广告。</p>
+					<p>
+						<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738"
+						     crossorigin="anonymous"></script>
+						<ins class="adsbygoogle"
+						     style="display:block; text-align:center;"
+						     data-ad-layout="in-article"
+						     data-ad-format="fluid"
+						     data-ad-client="ca-pub-7227292961308738"
+						     data-ad-slot="5706885181"></ins>
+						<script>
+						     (adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</p>
 					<p>只需要在你电脑或者手机上安装一个影视客户端，然后添加此机场服务就可以畅爽观看了。所以这个机场特别适合那些喜欢看剧、追剧的小伙伴们！</p>
 					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637975.webp" alt="高清影视资源"  /></p>
 					<p>冷门节点、专线节点、GPT解锁。</p>
