--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -67,6 +67,19 @@
 								<p>3、已支持优酷、爱奇艺、芒果、乐视、腾讯、搜狐、pptv、土豆、b站等主流视频网站</p>
 								<p>4、不要相信视频内的任何广告，其后果自负</p>
 								<p>5、如视频打不开，或受网络影响，可以多点击播放按钮，刷新几次</p>
+								<p>
+									<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738"
+								     crossorigin="anonymous"></script>
+									<ins class="adsbygoogle"
+											 style="display:block; text-align:center;"
+											 data-ad-layout="in-article"
+											 data-ad-format="fluid"
+											 data-ad-client="ca-pub-7227292961308738"
+											 data-ad-slot="5706885181"></ins>
+									<script>
+											 (adsbygoogle = window.adsbygoogle || []).push({});
+									</script>
+								</p>
 							</div>
 							<iframe class="v-iframe" src="" frameborder="0" width="100%" height="100%"></iframe>
 						</div>
