--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="../../css/common.css">
 		<link rel="stylesheet" href="../../css/style.css">
 		<link rel="stylesheet" href="files/vipvideo.css">
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738" crossorigin="anonymous"></script>
 	</head>
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-X99HN84D35"></script>
@@ -68,8 +69,6 @@
 								<p>4、不要相信视频内的任何广告，其后果自负</p>
 								<p>5、如视频打不开，或受网络影响，可以多点击播放按钮，刷新几次</p>
 								<p>
-									<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738"
-								     crossorigin="anonymous"></script>
 									<ins class="adsbygoogle"
 											 style="display:block; text-align:center;"
 											 data-ad-layout="in-article"
