--- a/dev.html
+++ b/dev.html
@@ -61,6 +61,18 @@
 			</div>
 		</section> -->
 		<section class="red-box" style="padding-bottom: 6.25rem">
+			<div>
+				<!-- banner位 -->
+				<ins class="adsbygoogle"
+				     style="display:block"
+				     data-ad-client="ca-pub-7227292961308738"
+				     data-ad-slot="6849781745"
+				     data-ad-format="auto"
+				     data-full-width-responsive="true"></ins>
+				<script>
+				     (adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
 			<div class="web-pro-title flex">
 				<ul class="flex">
 					<li class="test-title-name">Hello World。</li>
