--- a/share/share-1-1.html
+++ b/share/share-1-1.html
@@ -54,6 +54,18 @@
 			</div>
 		</section> -->
 		<section class="red-box" style="padding-bottom: 6.25rem">
+			<div>
+				<!-- banner位 -->
+				<ins class="adsbygoogle"
+				     style="display:block"
+				     data-ad-client="ca-pub-7227292961308738"
+				     data-ad-slot="6849781745"
+				     data-ad-format="auto"
+				     data-full-width-responsive="true"></ins>
+				<script>
+				     (adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
 			<div class="share-box flex">
 				<div class="share-item flex">
 					<div class="share-title lh1-5">
@@ -75,6 +87,17 @@
 					<p>只需要在你电脑或者手机上安装一个影视客户端，然后添加此机场服务就可以畅爽观看了。所以这个机场特别适合那些喜欢看剧、追剧的小伙伴们！</p>
 					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637975.webp" alt="高清影视资源"  /></p>
 					<p>冷门节点、专线节点、GPT解锁。</p>
+					<p>
+						<ins class="adsbygoogle"
+						     style="display:block; text-align:center;"
+						     data-ad-layout="in-article"
+						     data-ad-format="fluid"
+						     data-ad-client="ca-pub-7227292961308738"
+						     data-ad-slot="5706885181"></ins>
+						<script>
+						     (adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</p>
 					<p>双旦优惠活动：8折优惠码（<span class="t-info-c t-bold">20%off</span>）。活动有效期：2024/12/23 - 2025/01/03</p>
 					<p>最新的优惠码可以公众号私信问我，或者你注册登录后，注意看最上方的机场通知，那里会有最新的优惠活动。</p>
 					<p class="share-p-title">套餐资费</p>
