--- a/test.html
+++ b/test.html
@@ -65,7 +65,7 @@
 			</div>
 		</section> -->
 		<section class="red-box" style="padding-bottom: 6.25rem">
-			<div>
+			<div class="ads-box">
 				<!-- banner位 -->
 				<ins class="adsbygoogle"
 				     style="display:block"
