--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -41,7 +41,7 @@
 			</header>
 			
       <section class="blue-box-vip" style="padding-bottom: 6.25rem">
-				<div>
+				<div class="ads-box">
 					<!-- banner位 -->
 					<ins class="adsbygoogle"
 					     style="display:block"
