--- a/share/share-1-1.html
+++ b/share/share-1-1.html
@@ -54,18 +54,7 @@
 			</div>
 		</section> -->
 		<section class="red-box" style="padding-bottom: 6.25rem">
-			<div class="ads-box">
-				<!-- banner位 -->
-				<ins class="adsbygoogle"
-				     style="display:block"
-				     data-ad-client="ca-pub-7227292961308738"
-				     data-ad-slot="6849781745"
-				     data-ad-format="auto"
-				     data-full-width-responsive="true"></ins>
-				<script>
-				     (adsbygoogle = window.adsbygoogle || []).push({});
-				</script>
-			</div>
+			<!-- <div class="ads-box"></div> -->
 			<div class="share-box flex">
 				<div class="share-item flex">
 					<div class="share-title lh1-5">
@@ -94,9 +83,6 @@
 						     data-ad-format="fluid"
 						     data-ad-client="ca-pub-7227292961308738"
 						     data-ad-slot="5706885181"></ins>
-						<script>
-						     (adsbygoogle = window.adsbygoogle || []).push({});
-						</script>
 					</p>
 					<p>双旦优惠活动：8折优惠码（<span class="t-info-c t-bold">20%off</span>）。活动有效期：2024/12/23 - 2025/01/03</p>
 					<p>最新的优惠码可以公众号私信问我，或者你注册登录后，注意看最上方的机场通知，那里会有最新的优惠活动。</p>
@@ -151,6 +137,8 @@
 			var s = document.getElementsByTagName("script")[0]; 
 			s.parentNode.insertBefore(hm, s);
 		})();
+		
+		(adsbygoogle = window.adsbygoogle || []).push({});
 	</script>
 </body>
 </html>
