--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -41,18 +41,7 @@
 			</header>
 			
       <section class="blue-box-vip" style="padding-bottom: 6.25rem">
-				<div class="ads-box">
-					<!-- banner位 -->
-					<ins class="adsbygoogle"
-					     style="display:block"
-					     data-ad-client="ca-pub-7227292961308738"
-					     data-ad-slot="6849781745"
-					     data-ad-format="auto"
-					     data-full-width-responsive="true"></ins>
-					<script>
-					     (adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
-				</div>
+				<!-- <div class="ads-box"></div> -->
 				<div class="analysis-title flex">
 					<div class="lab-title">视频解析</div>
 					<div class="lab-item-info lh1-5">接口源于互联网，仅供学习娱乐交流，勿用于商业，后果自负！</div>
