--- a/share/share-1-1.html
+++ b/share/share-1-1.html
@@ -76,6 +76,7 @@
 					<p>只需要在你电脑或者手机上安装一个影视客户端，然后添加此机场服务就可以畅爽观看了。所以这个机场特别适合那些喜欢看剧、追剧的小伙伴们！</p>
 					<p class="p-center"><img src="https://cdnimg.liujueyi.cn/picgoimg/20241231154637975.webp" alt="高清影视资源"  /></p>
 					<p>冷门节点、专线节点、GPT解锁。</p>
+					<p class="p-center">-----------^^^^^^-----------</p>
 					<p>
 						<ins class="adsbygoogle"
 						     style="display:block; text-align:center;"
@@ -83,7 +84,9 @@
 						     data-ad-format="fluid"
 						     data-ad-client="ca-pub-7227292961308738"
 						     data-ad-slot="5706885181"></ins>
+						<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 					</p>
+					<p class="p-center">-----------^^^^^^-----------</p>
 					<p>双旦优惠活动：8折优惠码（<span class="t-info-c t-bold">20%off</span>）。活动有效期：2024/12/23 - 2025/01/03</p>
 					<p>最新的优惠码可以公众号私信问我，或者你注册登录后，注意看最上方的机场通知，那里会有最新的优惠活动。</p>
 					<p class="share-p-title">套餐资费</p>
@@ -137,8 +140,6 @@
 			var s = document.getElementsByTagName("script")[0]; 
 			s.parentNode.insertBefore(hm, s);
 		})();
-		
-		(adsbygoogle = window.adsbygoogle || []).push({});
 	</script>
 </body>
 </html>
