--- a/share/share-1-1.html
+++ b/share/share-1-1.html
@@ -12,7 +12,6 @@
 	<link href="https://fonts.loli.net/css2?family=Noto+Serif+SC:wght@400;700;900&display=swap"" rel="stylesheet">
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/style.css">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738" crossorigin="anonymous"></script>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X99HN84D35"></script>
@@ -78,13 +77,17 @@
 					<p>冷门节点、专线节点、GPT解锁。</p>
 					<p class="p-center">-----------^^^^^^-----------</p>
 					<p>
+						<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7227292961308738"
+						     crossorigin="anonymous"></script>
 						<ins class="adsbygoogle"
 						     style="display:block; text-align:center;"
 						     data-ad-layout="in-article"
 						     data-ad-format="fluid"
 						     data-ad-client="ca-pub-7227292961308738"
 						     data-ad-slot="5706885181"></ins>
-						<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+						<script>
+						     (adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
 					</p>
 					<p class="p-center">-----------^^^^^^-----------</p>
 					<p>双旦优惠活动：8折优惠码（<span class="t-info-c t-bold">20%off</span>）。活动有效期：2024/12/23 - 2025/01/03</p>
