--- a/talk.html
+++ b/talk.html
@@ -68,6 +68,14 @@
 				</ul>
 			</div> -->
 			<div class="item-list flex">
+				<a class="dev-item flex" href="share/share-1-2.html" target="_blank" data-num="58">
+					<li class="dev-item-name lh1-5">vpn机场推荐（本人力荐）- 已使用两年</li>
+					<li class="web-pro-info lh1-5">之前的机场更改了访问地址，最新地址请查看此文。</li>
+					<li class="item-bottom-info flex">
+						<span># 我说</span>
+						<span>2025-06-25</span>
+					</li>
+				</a>
 				<a class="dev-item flex" href="share/share-1-1.html" target="_blank" data-num="52">
 					<li class="dev-item-name lh1-5">好用的机场推荐（本人力荐）- 已使用一年</li>
 					<li class="web-pro-info lh1-5">推荐一个好用的机场，个人用觉得非常nice！价格比较合理，也不卡不掉线，还送一个影视媒体库。</li>
